2009-01-12  Jorge Gonzalez  <jorgegonz@artica.es>

	include/help/en/help_alert-matches.php,
	include/help/en/help_time_stamp-comparation.php: Added help files.

	include/languages/es.po, include/languages/es.mo: Updated Spanish
	translation.

	include/languages/index.pot: Updated po template.

	godmode/setup/setup.php, godmode/agentes/alert_manager.php: Added
	help functions.

2009-01-12  Jorge Gonzalez  <jorgegonz@artica.es>

	* include/languages/es.po, include/languages/es.mo: Updated Spanish
	  translation.

	* include/languages/index.pot: Updated po template.

	* include/functions_alerts.php, godmode/menu.php,
	  godmode/agentes/module_manager_editor_network.php,
	  godmode/alerts/alert_templates.php,
	  godmode/alerts/configure_alert_template.php,
	  godmode/setup/setup.php, operation/agentes/estado_alertas.php:
	  Modified strings to improve i18n infrastructure.

2009-01-12  Esteban Sanchez  <estebans@artica.es>

	* include/javascript/pandora_alerts.js: Added to repository.
	Javascript functions for alerts.

	* pandoradb_data.sql: Added missing field in a talert_commands row.

2009-01-12  Esteban Sanchez  <estebans@artica.es>

	* include/functions_alerts.php: Removed debug output. Show no SQL
	error on delete_alert_* functions.

	* index.php: Added missing jQuery script.

	* godmode/alerts/alert_templates.php: Added a missing br. Show "empty"
	string if no value was set.

	* godmode/alerts/alert_commands.php: Added a check to avoid internal
	commands removal.

	* pandoradb.sql: Removed talerta table.

	* pandoradb_data.sql: Data from talerta moved to talert_commands.

2009-01-12  Esteban Sanchez  <estebans@artica.es>

	* godmode/agentes/alert_manager.php: Complete rewritten of the alert
	system when assigned alerts to an agent.

	* pandoradb.sql: New tables for alert system. These are:
	talert_commands, talert_actions, talert_templates,
	talert_template_modules, talert_template_module_actions. No migration
	tool is available yet.
